--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "ftp": "^0.3.10",
-    "gsap": "^3.12.5"
+    "gsap": "^3.12.5",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/ftp": "^0.3.36",
